<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cutting Chai</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loadingtype">Indexing in progress</string>
    <string name="search">Search</string>
   	<string name="crash_toast_text">App has crashed need to send report to dev!</string>
       
    <string name="crop">Crop</string>
    <string name="setwallpaper">Set As Wallpaper</string>
    <string name="setother">Set Other</string>
    <string name="rotate">Rotate</string>
    <string name="zoom">Zoom</string>
    <string name="croppedImageDesc">The cropped image.</string>
    <string name="favButtonDesc">The fav button.</string>

    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>
    
     
    <string name="folder_title">Enter folder name *optional*</string>
	<string name="search_title">YYYY-MM-DD</string>
    <string name="save_text">EXIF</string>
    <string name="wallpaper_text">Set as Wallpaper</string>
    <string name="edit_set">Edit</string>
    <string name="share_text">Share</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_report_feedback">Report/Feedback</string>
    <string name="descr_image">Image</string>

</resources>