<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
<android.support.v4.view.ViewPager
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3.24" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:id="@+id/button_container"
    android:orientation="horizontal"
    android:baselineAligned="false" >



		<ImageButton
		    android:id="@+id/backward"
		    style="@style/CropButton"
		    android:layout_width="15dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.30"
		    android:src="@drawable/backward"
		    android:textColor="#000" />

	    <Button
	        android:id="@+id/save"
	        style="@style/CropButton"
	        android:textColor="#000"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.45"
	        android:text="@string/save_text"
	        android:textSize="15sp" />
            
	    <Button
	        android:id="@+id/edit_set"
	        style="@style/CropButton"
	        android:textColor="#000"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.45"
	        android:text="@string/edit_set"
	        android:textSize="15sp" />
	    
	    <Button
    	        android:id="@+id/wallpaper"
    	        style="@style/CropButton"
	        	android:textColor="#000"
    	        android:layout_width="0dp"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="0.85"
    	        android:text="@string/wallpaper_text"
    	        android:textSize="15sp" />

	    <ImageButton
	        android:id="@+id/forward"
	        style="@style/CropButton"
	        android:layout_width="15dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.30"
	        android:src="@drawable/forward"
	        android:textColor="#000" />

	</LinearLayout>

    	

	





</LinearLayout>
